advanced-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: advanced-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: advanced-app

  template:
    metadata:
      labels:
        app: advanced-app

    spec:
      containers:
      - name: nginx
        image: nginx:1.25

        command: ["/bin/sh"]

        args:
        - -c
        - |
          env
          nginx -g 'daemon off;'
