deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: myapp

  template:
    metadata:
      labels:
        app: myapp

    spec:
      containers:
        - name: nginx
          image: nginx:1.27
