deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: nginx
      env: dev

  template:
    metadata:
      labels:
        app: nginx
        env: dev
        version: v1

    spec:
      containers:
        - name: nginx
          image: nginx
