healthcheck-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: healthcheck-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: healthcheck-app

  template:
    metadata:
      labels:
        app: healthcheck-app

    spec:
      containers:
      - name: nginx
        image: nginx:1.25

        ports:
        - containerPort: 80

        startupProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 6

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
