hostpath-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: hostpath-pod

spec:
  containers:
    - name: nginx
      image: nginx

      volumeMounts:
        - name: host-storage
          mountPath: /host-data

  volumes:
    - name: host-storage
      hostPath:
        path: /tmp/host-data
        type: DirectoryOrCreate
