liveness-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: liveness-pod

spec:
  containers:
    - name: nginx
      image: nginx

      livenessProbe:
        httpGet:
          path: /wrong
          port: 80

        initialDelaySeconds: 5
        periodSeconds: 5
