pod-configmap-volume.yaml
apiVersion: v1
kind: Pod

metadata:
  name: nginx-config-volume

spec:
  containers:
    - name: nginx
      image: nginx

      volumeMounts:
        - name: config-volume
          mountPath: /etc/config

  volumes:
    - name: config-volume
      configMap:
        name: app-config
