pod-pvc.yaml
apiVersion: v1
kind: Pod

metadata:
  name: nginx-pvc

spec:
  containers:
    - name: nginx
      image: nginx

      volumeMounts:
        - mountPath: /data
          name: storage

  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: my-pvc
