pod-secret.yaml
apiVersion: v1
kind: Pod

metadata:
  name: nginx-secret

spec:
  containers:
    - name: nginx
      image: nginx
