readiness-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: readiness-pod

spec:
  containers:
    - name: nginx
      image: nginx

      readinessProbe:
        httpGet:
          path: /
          port: 80

        initialDelaySeconds: 5
        periodSeconds: 5
