resource-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: resource-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: resource-app

  template:
    metadata:
      labels:
        app: resource-app

    spec:
      containers:
      - name: nginx
        image: nginx:1.25

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "256Mi"

        ports:
        - containerPort: 80
