volume-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: volume-pod

spec:
  containers:
    - name: nginx
      image: nginx

      volumeMounts:
        - name: my-volume
          mountPath: /data

  volumes:
    - name: my-volume
      emptyDir: {}
