app-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: app-service

spec:
  type: NodePort

  selector:
    app: myapp

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
